# library

./: .gitignore  CMakeLists.txt  build.gradle
src/main/: AndroidManifest.xml
src/main/assets/arpoi/: local_data.json
src/main/assets/easyar/: targets.json
src/main/assets/model/arrow/: data.txt
src/main/assets/model/compass/: data.txt
src/main/assets/model/compass/script/: fragment.shader  vertex.shader
src/main/assets/model/cube/: cube.txt  data.txt
src/main/assets/model/cube/shader/: fragmentShader.frag  vertexShader.vert
src/main/assets/model/foot/: foot.txt
src/main/assets/model/nanosuit/: nanosuit.txt
src/main/assets/model/nanosuit/shader/: fragmentShader.frag
src/main/assets/model/route_item/: data.txt
src/main/assets/model/route_item/script/: vertex.shader
src/main/assets/model/sphere/shader/: fragmentShader.frag  vertexShader.vert
src/main/assets/model/test/: 1115.txt  1117.txt
src/main/cpp/artoolkit/: nftBook.cpp
src/main/cpp/easyar/: helloarvideo.cc
src/main/cpp/opencv/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
src/main/java/io/weichao/activity/: ARVideoActivity.java  BaseFragmentActivity.java  NFTActivity.java  PermissionActivity.java  SplashActivity.java
src/main/java/io/weichao/adapter/: BaseMultPagesAdapter.java  MultPagesAdapter.java  ViewPagerAdapter.java  ViewPagerRecyclerViewAdapter.java
src/main/java/io/weichao/application/: BaseApplication.java
src/main/java/io/weichao/artoolkit/: ARToolkitCameraSV.java
src/main/java/io/weichao/bean/: ApplicationBean.java  DetectionBean.java  SensorDataBean.java
src/main/java/io/weichao/broadcast/: BootBroadcastReceiver.java
src/main/java/io/weichao/controller/: ExoPlayerMediaController.java
src/main/java/io/weichao/domain/: ARData.java  DataSource.java  DetectionBasedTracker.java  IconMarker.java  LocalDataSource.java  Marker.java  Matrix.java  PaintableBox.java  PaintableBoxedText.java  PaintableCircle.java  PaintableGps.java  PaintableIcon.java  PaintableLine.java  PaintableObject.java  PaintablePoint.java  PaintablePosition.java  PaintableText.java  PhysicalLocationUtility.java  Vector.java
src/main/java/io/weichao/listener/: BaseOnTouchListener.java  OnSensorChangedListener.java
src/main/java/io/weichao/manager/: RecyclerViewLayoutManager.java
src/main/java/io/weichao/model/: ARPOICameraModel.java  ARPOIModel.java  ARPOISensorModel.java  ARVideoModel.java  BaseViewPagerModel.java  CameraModel.java  CompassModel.java  EarthMoonModel.java  FaceDetectionModel.java  GIFModel.java  GLESModel.java  GifModel.java  NFTModel.java  SensorModel.java  SphereModel.java
src/main/java/io/weichao/museum/model/: GLESModel.java
src/main/java/io/weichao/opengl_obj/: Arrow.java  Celestial.java  Compass.java  DoubleHemiSphere.java  RouteItem.java  Sphere.java
src/main/java/io/weichao/opengl_sv/: GLES30CompassSV.java  GLES30EarthMoonSV.java  GLES30RouteSV.java  GLVideoSV.java
src/main/java/io/weichao/pagetransformer/: ViewPagerPageTransformer.java
src/main/java/io/weichao/runnable/: CountDownRunnable.java  ViewPagerAutoRunLatterRunnable.java  ViewPagerAutoRunPreviousRunnable.java  ZoomImageViewAutoScaleRunnable.java
src/main/java/io/weichao/scroller/: ViewPagerScroller.java
src/main/java/io/weichao/util/: AssetsUtil.java  BitmapUtil.java  BluetoothUtil.java  BrightnessUtil.java  CameraUtil.java  ColorUtil.java  ConstantUtil.java  FileUtil.java  GLES30Util.java  HardwareInfoUtil.java  IntentUtil.java  JsonUtil.java  LanguageUtil.java  ListUtil.java  LowPassFilterUtil.java  MapUtil.java  MathUtil.java  MatrixStateUtil.java  MediaUtil.java  NetUtil.java  OpenCVUtil.java  PermissionUtil.java  SharedPreferenceUtil.java  SnackbarUtil.java  SoundUtil.java  StringUtil.java  ViewPagerUtil.java  ViewUtil.java
src/main/java/io/weichao/view/: Arrow.java  AugmentedView.java  BaseCameraSurfaceView.java  CameraPreview.java  CameraSurface.java  CaptureView.java  Celestial.java  Compass.java  DoubleHemiSphere.java  GLES30CompassSV.java  GLES30EarthMoonSV.java  GLES30RouteSV.java  GLES30SphereSV.java  GLVideoView.java  MultPagesView.java  RouteItem.java  Sphere.java  ViewPagerRecyclerView.java  ZoomImageView.java
src/main/java/io/weichao/widget/: Arrow.java  CameraPreview.java  Compass.java  GLES30CompassSV.java  GLES30RouteSV.java  RouteItem.java
src/main/res/anim/: bottom_in.xml
src/main/res/layout/: activity_splash.xml  activity_video.xml  fragment_cover.xml  fragment_image.xml  fragment_video.xml  layout_face_detection.xml
src/main/res/raw/: frag_earth.glsl  frag_moon.glsl  lbpcascade_panda.xml  vertex_earth.glsl  vertex_moon.glsl
src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
